correct selector footer__social-wraper

--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -65,9 +65,12 @@
 }
 
 .footer__social-wrapper{
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     padding: 0 15px 0 15px;
     width: 300px;
+    padding-bottom: 10%;
 }
 
 .footer__social-links img{
